--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/Pages/_Host.cshtml
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/Pages/_Host.cshtml
@@ -11,6 +11,9 @@
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="css/index.css">
+    
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
