Confirm MatBlazor is working

--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/Pages/_Host.cshtml
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/Pages/_Host.cshtml
@@ -25,7 +25,7 @@
         </a>
       </div>
     </nav>
-    <div id="main">@(await Html.RenderComponentAsync<NRustLightning.GUI.Client.Main.MyApp>(BoleroHostConfig))</div>
+    <div id="main">@(await Html.RenderComponentAsync<Client.Main2.MyApp2>(BoleroHostConfig))</div>
     @Html.RenderBoleroScript(BoleroHostConfig)
   </body>
 </html>
